# atlas-starke-fc-api

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEPLOY_PORTAINER.md  DEPLOY_PORTAINER_WEB_ONLY.md  DEPLOY_RAPIDO.md  Dockerfile  README.md  analise.md  docker-compose.dev.yml  docker-compose.yml  melhorias.md  pyproject.toml  remover.md  requirements.txt
.github/workflows/: build-and-push.yml
alembic/: env.py
alembic/versions/: 0029455cfa5f_drop_unnecessary_monthly_tables.py  041b7bd54fb9_update_contracts_add_valor_fields_.py  0a38e7b8a521_add_source_to_runs.py  10e24d47b737_remove_saldos_table.py  1dbff35f92c0_add_document_status_validation_fields.py  2aca30aa7d52_fix_fatura_unique_constraint_add_filial.py  2b8fa31310fb_add_empreendimentos_table.py  (+40 more)
config/: mega_mapping.yaml
deploy/: DEPLOYMENT.md  starke.service  starke.timer
docs/: API_AUDIT.md  API_CLIENTS_RM.md  API_DOCUMENTS_STATUS.md  API_DOCUMENTS_UPLOAD.md  API_USERS_ROLES.md  AUTHENTICATION_GUIDE.md  BCRYPT_FIX.md  BUG-CRITICO-FILTRO-DESPESAS.md  COMO_FUNCIONA.md  CONCLUSAO-VALIDACAO-SOLUCAO-CLIENTE.md  FRONTEND_GUIDE.md  GOOGLE_SHEETS_OAUTH_SETUP.md  IMPLEMENTACAO-FILTRO-CONTRATOS.md  PERGUNTAS-URGENTES-MEGA-ERP.md  PROBLEMA-DOCUMENTACAO-EXPAND.md  PROBLEMAS-CRITICOS-APIS.md  QUICK_START.md  RESULTADO-VALIDACAO-SOLUCAO-CLIENTE.md  SETUP_COMPLETO.md  SOLUCAO-CLIENTE-FILTRO-CONTRATOS.md  SOLUCAO-FILTRO-EMPREENDIMENTOS.md  TESTE-ROTAS-FILIAL-EXPAND.md  TESTE_RAPIDO.md  analise_implementacao_requisitos.md  backfill-guide.md  configuracoes_usuario.md  conversao_moedas.md  documentos_ativos_passivos.md  escopo-fluxo-caixa.md  exemplo_retorno_mega.md  mapeamento-api-mega.md  requisitos_cash_flow_melhorias.md  resultado-validacao-rotas.md  rotas-api-graficos.md  rotas-mega-utilizadas.md  validacao-rotas-otimizadas.md
tests/: conftest.py  test_positions_endpoints.py  test_positions_integration.py
validation_output/: RELATORIO_INADIMPLENCIA_24015.md  SUMARIO_VALIDACAO.txt  contratos_24015_resumo_ate_30_dias.json  delinquency_24015_calculated.json  delinquency_24015_database.json  parcelas_24015_ate_30_dias_detalhado.json  parcelas_24015_vencidas_ativas.json
(+165 files in other folders)
